# ivd_splat

./: .envrc  .gitignore  .gitmodules  LICENSE  README.md  install_with_pip.sh  pyproject.toml
docs/: custom_methods_integration.md  reference.md
experiments/: README.md  common_slurm_setup.sh  mlflow_server.sh
experiments/main/: 0_slurm_run_sfm.sh  10_slurm_run_real_init_methods.sh  11_slurm_get_real_init_num_pts_per_scene.sh  12_slurm_train_with_edgs.sh  13_slurm_train_with_monodepth.sh  14_slurm_train_gt_with_real_init_size.sh  15_idhfr_sfm.sh  16_edgs_without_scale_adjustment.sh  17_idhfr_sfm_with_lr_changes.sh  18_slurm_train_with_da3.sh  19_nanogs_simplification_test.sh  1_slurm_get_num_pts_per_scene.sh  20_inria_densification.sh  2_slurm_run_gt_pointcloud_init.sh  3_slurm_run_3dgs_mcmc_sfm.sh  4_slurm_run_3dgs_mcmc_gt_pointcloud.sh  5_slurm_run_gt_pointcloud_no_adc_fractions.sh  6_slurm_run_gt_pointcloud_init_size_same_as_sfm.sh  7_slurm_run_with_different_gaussian_caps.sh  8_slurm_run_sfm_mipnerf_tnt.sh  9_slurm_run_mcmc_sfm_mipnerf_tnt.sh  common_vars.sh  get_num_pts_per_scene.py  get_sfm_init_pts_per_scene.py  real_init_get_min_num_pts_per_scene.py
results_scripts/: gmax_per_scene.json  init_sfm_pts_per_scene.json  real_init_num_points_per_scene.json  results.ipynb
src/: nerfbaselines_register.py
src/da3/: config.py  da3_init.py  main.py  proxy_dataset.py
src/da3/gaussian_splatting/: camera.py  dataset_readers.py  general_utils.py  nerfbaselines_to_scene_info.py
src/edgs/: LICENSE  config.py  init.py  main.py  proxy_dataset.py
src/edgs/gaussian_splatting/: camera_utils.py  graphics_utils.py
src/ivd_splat/: config.py  initialization.py  nanogs_simplification.py  runner.py  trainer.py  types.py
src/ivd_splat/datasets/: colmap.py  normalize.py
src/ivd_splat/nerfbaselines_integration/: method.py  method_spec.py  parser.py
src/ivd_splat/strategies/: __init__.py  base.py  default_with_gaussian_cap.py  default_without_adc.py  idhfr.py  inria.py  mcmc.py  mcmc_config_overrides.py  revdgs.py
src/ivd_splat/utils/: cuda_memory.py  plot3d.py  (+3 more)
src/mlflow_nerfbaselines_logger/: logger.py  patch_mlflow_log_image.py
src/monodepth/: LICENSE  config.py  generate_pointcloud.py  main.py  proxy_dataset.py
src/shared/: LICENSE  cuda_memory.py  download_with_tqdm.py  point_cloud_io.py  save_init_info.py  scene_subdir.py  select_cameras_kmeans.py  serializable_config.py  splat_ply_io.py
(+23 files in other folders)
